# BannerGenerationService

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  app.py  constants.py  docker-compose.yml  main.py  model.py  package-lock.json  package.json  pipeline.py  pyproject.toml  requirements.txt  router.py  schemas.py  test.py  util.py  utils.py
.docker/: .env.example
.docker/nginx/: nginx.conf
configs/: .env.example  Environment.py  Minio.py
jupyter-notebooks/: InpaitingBack.ipynb  UserClusterization.ipynb
migrations/versions/: 6d8d109b3785_add_nullable.py  b6fd91e89857_add_preference.py  b761e96727f9_update_user.py  c1bed59d9ac9_init.py  fe537fa5c772_null_for_success_image.py
models/: __init__.py  image.py  preference.py  user.py
repositories/: image.py  preference.py  user.py
routing/v1/: auth.py  image.py  ml.py  preference.py  user.py
schemas/: auth.py  image.py  ml.py  preference.py  user.py
services/: auth.py  image.py  minio.py  ml.py  preference.py  user.py
src/: index.css  main.jsx
src/components/: Test.jsx
src/components/Auth/: AuthPage.jsx  AuthPage.module.css
src/components/History/: History.jsx  History.module.css
src/components/MainPage/: IconToolTip.jsx  IconToolTip.module.css  MainPage.jsx  MainPage.module.css
src/components/Registration/: Registration.jsx  Registration.module.css
src/components/Settings/: Settings.jsx  Settings.module.css
src/http/: index.js
src/service/: AuthService.js  ImageCreateService.js
src/store/: store.js
utils/: httpx_client.py  utils.py
