[tool.poetry]
name = "lct2024-image-generator-13"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-032-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
diffusers = "^0.28.2"
pycairo = "^1.26.0"
pillow = "^10.3.0"
transformers = "^4.41.2"
accelerate = "^0.31.0"
pydantic = "^2.7.3"
fastapi = "^0.111.0"
ruff = "^0.4.8"
pandas = "^2.2.2"
cairosvg = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
