[tool.poetry]
name = "lctllm"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-032-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keybert = "^0.8.4"
llama-cpp-python = "^0.2.75"
pyarrow = "^16.1.0"
accelerate = "^0.30.1"
pandas = "^2.2.2"
fastapi = {extras = ["all"], version = "^0.111.0"}
loguru = "^0.7.2"
ruff = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
